--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <div class="header">
+    <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <div>
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -21,12 +21,12 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-      <div class="search-engine-optimization">
-        <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+      </nav>
+    </header>
+    <div id="hero"></div>
+    <section id="content">
+      <div id="search-engine-optimization" class="search-engine-optimization">
+        <img class="float-left" src="./assets/images/search-engine-optimization.jpg" />
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching for the right business
@@ -35,7 +35,7 @@
         </p>
       </div>
       <div id="online-reputation-management" class="online-reputation-management">
-        <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <img class="float-right" src="./assets/images/online-reputation-management.jpg" />
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social media allows anyone
@@ -45,7 +45,7 @@
         </p>
       </div>
       <div id="social-media-marketing" class="social-media-marketing">
-        <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <img class="float-left" src="./assets/images/social-media-marketing.jpg" />
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits. Social media
@@ -53,8 +53,8 @@
           find the right markets and increase your lead generation.
         </p>
       </div>
-    </div>
-    <div class="benefits">
+    </section>
+    <aside id="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" />
@@ -79,10 +79,10 @@
           you no longer need to advertise your page.
         </p>
       </div>
-    </div>
-    <div class="footer">
-      <h2>Made with ❤️️ by Horiseon</h2>
+    </aside>
+    <footer class="footer">
+      <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
