--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   </head>
 
   <body>
-    <header class="header">
-    <header class="header">
+    <div class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <nav>
-      <nav>
+      <div>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,18 +21,12 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </nav>
-    </header>
-    <div id="hero"></div>
-    <section id="content">
-      <div id="search-engine-optimization" class="search-engine-optimization">
-        <img class="float-left" src="./assets/images/search-engine-optimization.jpg" />
-      </nav>
-    </header>
-    <div id="hero"></div>
-    <section id="content">
-      <div id="search-engine-optimization" class="search-engine-optimization">
-        <img class="float-left" src="./assets/images/search-engine-optimization.jpg" />
+      </div>
+    </div>
+    <div class="hero"></div>
+    <div class="content">
+      <div class="search-engine-optimization">
+        <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching for the right business
@@ -43,8 +35,7 @@
         </p>
       </div>
       <div id="online-reputation-management" class="online-reputation-management">
-        <img class="float-right" src="./assets/images/online-reputation-management.jpg" />
-        <img class="float-right" src="./assets/images/online-reputation-management.jpg" />
+        <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social media allows anyone
@@ -54,8 +45,7 @@
         </p>
       </div>
       <div id="social-media-marketing" class="social-media-marketing">
-        <img class="float-left" src="./assets/images/social-media-marketing.jpg" />
-        <img class="float-left" src="./assets/images/social-media-marketing.jpg" />
+        <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits. Social media
@@ -63,9 +53,9 @@
           find the right markets and increase your lead generation.
         </p>
       </div>
-    </section>
-    <aside id="benefits" class="benefit-icon">
-      <div>
+    </div>
+    <div class="benefits">
+      <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" />
         <p>
@@ -73,7 +63,7 @@
           customers directly to your website.
         </p>
       </div>
-      <div>
+      <div class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" />
         <p>
@@ -81,7 +71,7 @@
           and visibility for your business.
         </p>
       </div>
-      <div>
+      <div class="benefit-cost">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" />
         <p>
@@ -89,14 +79,10 @@
           you no longer need to advertise your page.
         </p>
       </div>
-    </aside>
-    <footer class="footer">
-      <h4>Made with ❤️️ by Horiseon</h4>
-    </aside>
-    <footer class="footer">
-      <h4>Made with ❤️️ by Horiseon</h4>
+    </div>
+    <div class="footer">
+      <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
-    </footer>
-    </footer>
+    </div>
   </body>
 </html>
