--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     <figure class="hero"></figure>
     <section class="content">
       <article id="search-engine-optimization" class="search-engine-optimization">
-        <img class="float-left" src="./assets/images/search-engine-optimization.jpg" />
+        <img
+          class="float-left"
+          src="./assets/images/search-engine-optimization.jpg"
+          alt="search engine optimization content"
+        />
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching for the right business
@@ -35,7 +39,11 @@
         </p>
       </article>
       <article id="online-reputation-management" class="online-reputation-management">
-        <img class="float-right" src="./assets/images/online-reputation-management.jpg" />
+        <img
+          class="float-right"
+          src="./assets/images/online-reputation-management.jpg"
+          alt="online reputation management content"
+        />
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social media allows anyone
@@ -45,11 +53,11 @@
         </p>
       </article>
       <article id="social-media-marketing" class="social-media-marketing">
-<<<<<<< Updated upstream
-        <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-=======
-        <img class="float-left" src="./assets/images/social-media-marketing.jpg" />
->>>>>>> Stashed changes
+        <img
+          class="float-left"
+          src="./assets/images/social-media-marketing.jpg"
+          alt="social media marketing content"
+        />
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits. Social media
@@ -61,7 +69,7 @@
     <aside class="benefits">
       <article class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
         <p>
           Inbound strategies for lead generation require less work for your business, bringing
           customers directly to your website.
@@ -69,7 +77,7 @@
       </article>
       <article class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png" alt="brand awareness icon" />
         <p>
           Users find your business through paid and organic searches, increasing the search ranking
           and visibility for your business.
@@ -77,7 +85,7 @@
       </article>
       <article class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png" alt="cost management icon" />
         <p>
           As the search ranking for your business increases, your advertising costs decrease, and
           you no longer need to advertise your page.
