--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </article>
     </section>
     <aside class="benefits">
-      <article class="benefit-lead">
+      <article class="benefit">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
         <p>
@@ -75,7 +75,7 @@
           customers directly to your website.
         </p>
       </article>
-      <article class="benefit-brand">
+      <article class="benefit">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" alt="brand awareness icon" />
         <p>
@@ -83,7 +83,7 @@
           and visibility for your business.
         </p>
       </article>
-      <article class="benefit-cost">
+      <article class="benefit">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" alt="cost management icon" />
         <p>
