--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <img
           class="float-left"
           src="./assets/images/search-engine-optimization.jpg"
-          alt="search engine optimization content"
-        />
+          alt="search engine optimization content" />
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching for the right business
@@ -42,8 +41,7 @@
         <img
           class="float-right"
           src="./assets/images/online-reputation-management.jpg"
-          alt="online reputation management content"
-        />
+          alt="online reputation management content" />
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social media allows anyone
@@ -56,8 +54,7 @@
         <img
           class="float-left"
           src="./assets/images/social-media-marketing.jpg"
-          alt="social media marketing content"
-        />
+          alt="social media marketing content" />
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits. Social media
